Fixed center align for card

--- a/client/src/components/ParkingInfoPage/PSGroup3.0.0/PSCard/PSCard.css
+++ b/client/src/components/ParkingInfoPage/PSGroup3.0.0/PSCard/PSCard.css
@@ -3,7 +3,6 @@
 }
 
 .ps-card {
-	border-radius: 1rem;
 	height: 75vh;
 	width: 30vw;
 	min-width: 300px;
@@ -31,11 +30,10 @@
 }
 
 .ps-card-body .main-text {
-	position: relative;
-	left: -0.5rem;
 	margin-bottom: 0px;
 	font-size: 2.25rem;
 	font-weight: 300;
+	text-align: center;
 }
 
 .ps-card-body .sub-text {
